# plate-order-system-v1

./: .clinerules  .cursorrules  .env.example  .env.txt  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  DEVELOPER.md  Dockerfile  GITHUB_SETUP.md  IMPLEMENTATION-SUMMARY.md  Makefile  QUICK-START-GUIDE.md  README-module1.md  README.md  REFACTORING_PLAN.md  RENDER_DEPLOYMENT.md  SECURE-CREDENTIALS-GUIDE.md  SECURITY.md  VOICE_ORDER_INSTRUCTIONS.md  VOICE_ORDER_README.md  alembic.ini  angular_v19+_development_standards_and_best_practices_a_comprehensive_guide.txt  app.db.backup  app.db.old  auto_deploy_to_render.sh  auto_fix_and_restart.sh  auto_implement_overnight.sh  backend_logs.txt  base_template_reference.md  beyond-mvp-features-summary.md  build_css_script.md  bulletproof_restart.sh  clean_restart.sh  cleanup_and_setup.sh  comprehensive-enhancement-documentation.md  config.py  (+116 more)
.github/: PULL_REQUEST_TEMPLATE.md
app/: ClientLayout.tsx  globals.css  layout.tsx  main.py  page.tsx  restaurant.db  run.py
backend/: .env.example  api.py  api_server.py  create_tables.py  create_tables_direct.py  init_db_standalone.py  main.py  main_api.py  main_fixed.py  models.py  requirements.txt  seed_default_data.py  setup.sh
backup/: connection_manager.py
components/: floor-plan-editor.tsx  floor-plan-view.tsx  page-header.tsx  seat-picker-overlay.tsx  sidebar.tsx  table-view.tsx  theme-provider.tsx
css/: voice-recognition.css
db_backups/: app.db.1743436553  app.db.1743438072  app.db.1743457047  app.db.1743461984  (+67 more)
(+350 files in other folders)
